<resources>
    <string name="app_name">ParkingManager</string>
    <string name="cameraSetting">Camera Configuration</string>
    <string name="List">List</string>
    <string name="id">ID</string>
    <string name="price">Price</string>
    <string name="set">SET</string>
    <string name="run">RUN</string>
    <string name="search">SEARCH</string>
    <string name="total">TOTAL</string>
    <string name="User">User</string>
    <string name="Admin">Admin</string>
    <string name="CreateNewCard">Create New Card</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="txt_setting_changeyourlocale">Change your language</string>
    <string name="msg_change_locale">Language Change</string>
    <string name="ManageCard">Manage Card</string>
    <string name="ManageUser">Manage User</string>
    <string name="CustomerDetails">Customer Details</string>
    <string name="NoRecordsFound">No Records Found</string>
    <string name="ManageCardPrice">Manage Card Price</string>
    <string name="EnterYourCardId">Enter Your Card Id</string>
    <string name="OK">OK</string>
    <string name="EnterYourCardNo">Enter Your CardNO</string>
    <string name="EnterUserName">Enter UserName</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="CreateNewUser">Create New User</string>
    <string name="CreateNewAdmin">Create New Admin</string>
    <string name="EnterAdminName">Enter Admin Name</string>
    <string name="Ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Want to logOut</string>
    <string name="user">User</string>
    <string name="TotalPrice">Total Price</string>
    <string name="LogInTime">Log In Time</string>
    <string name="LogOutTime">Log Out Time</string>
    <string name="TotalCarInput">Total Car IN</string>
    <string name="nfc_disabled">NFC is disabled</string>
    <string name="disable">Disable</string>
    <string name="CardID">Card ID</string>
    <string name="CreateNew">Create New</string>
    <string name="Deatils">Details</string>
    <string name="EnterCardNumber">Enter Card Number</string>
    <string name="EnterCardPrice">Enter Card Price</string>
    <string name="EnterCardType">Enter Card Type</string>
    <string name="EnterDate">Enter Date</string>
    <string name="EntertheCardno">Enter Card Number</string>
    <string name="INtime">IN Time</string>
    <string name="InImage">IN Image</string>
    <string name="OutImage">OUT Image</string>
    <string name="OutTime">OUT Time</string>
    <string name="Search">Search</string>
    <string name="Status">Status</string>

    <string name="capture">CAPTURE</string>
    <string name="EnterTime">Enter Time</string>
    <string name="From">From</string>
    <string name="TO">TO</string>
    <string name="Settings">Settings</string>
    <string name="TransactionManager">Transaction Manager</string>
    <string name="Browse">Browse</string>
    <string name="AllDelete">DELETE ALL</string>
    <string name="Restoredatabse">Restore databse</string>
    <string name="BackUpdatabse">BackUp databse</string>
    <string name="TimeIntervalInMinute">Time Interval In Minute</string>

    <string name="Restore">Restore</string>
    <string name="BackUP">BackUp</string>
    <string name="SelectBefore">Select Before</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>

    <string name="SelectAccount">Select Account</string>
    <string name="OnlineBackupGoogleDrive">Online Backup Google Drive</string>
    <string name="OfflineBackupSDCard">Offline Backup SD Card</string>
    <string name="CardNO">Card NO</string>
    <string name="delete">Delete</string>

    <string name="ChangeLanguage">Change Language</string>
    <string name="Cantcreatedirectorytosaveimage">Can not create directory to saveimage</string>
    <string name="Please_enter_cardprice_in_admin_panel">Please enter  card price in admin panel</string>
    <string name="Please_enter_valid_card_no">Please enter valid card no</string>
    <string name="Please_Create_Card_Type_in_Admin_Panel">Please Create Card Type in Admin Panel</string>
    <string name="Image_could_not_be_saved">Image could not be saved</string>
    <string name="Please_Come_in">Please Come in</string>
    <string name="Please_go_out">Please Go out</string>
    <string name="Device_Connected_Starting_Auto_mode">Device Connected Starting Auto mode</string>
    <string name="Device_is_not_connected_Please_use_manual_mode">Device is not connected Please use manual mode</string>
    <string name="hello_world">Hello world!</string>
    <string name="Please_LogOut_First">Please LogOut First</string>
    <string name="Add_All_Fields">Add All Fields</string>
    <string name="Connected">Connected</string>
    <string name="DeviceConnectedReadingCardId">Device Connected Reading Card ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
