<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    tools:context="com.tamtoanthang.apps.mobileparking.SecondActivity">
    <FrameLayout android:id="@+id/preview"
        android:background="@color/text_color_white"
        android:layout_weight="1" android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/galleryimage"
        android:layout_alignParentTop="true">
    </FrameLayout>


    <Button
        android:clickable="true"
        android:background="@color/colorPrimaryDark"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/set"
        android:id="@+id/set"
        android:layout_alignBottom="@+id/run"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@color/colorPrimaryDark"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/search"
        android:id="@+id/search"
        android:layout_alignBaseline="@+id/total"
        android:layout_alignBottom="@+id/total"
        android:layout_toLeftOf="@+id/total"
        android:layout_toStartOf="@+id/total" />

    <Button
        android:background="@color/colorPrimaryDark"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/run"
        android:id="@+id/run"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/set"
        android:layout_toEndOf="@+id/set" />

    <Button
        android:background="@color/colorPrimaryDark"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:id="@+id/total"
        android:text="@string/total"
        android:layout_alignTop="@+id/capture"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:hint="@string/id"
        android:clickable="true"
        android:textSize="20dp"
        android:background="@color/red"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:textColorHint="#ffffff"
        android:id="@+id/id"
        android:layout_alignTop="@+id/price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_margin="2dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:background="@color/red"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:id="@+id/price"
        android:hint="@string/price"
        android:layout_above="@+id/search"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView

        android:background="@color/text_color_white"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/galleryimage"
        android:scaleType="fitXY"
        android:layout_above="@+id/id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="81dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginBottom="89dp"
        android:layout_above="@+id/id"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:background="@color/colorPrimaryDark"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/capture"
        android:id="@+id/capture"
        android:layout_alignBaseline="@+id/run"
        android:layout_alignBottom="@+id/run"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
