<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="@color/colorPrimary"

        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SelectAccount"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="3dp"></View>

    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_margin="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/OnlineBackupGoogleDrive"
        android:id="@+id/textView12" />

    <TextView
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/OfflineBackupSDCard"
        android:id="@+id/textView13" />
</LinearLayout>