<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_height="400dp">

    <EditText
        android:textAlignment="center"
        android:textColorHint="@color/text_color_white"
        android:hint="@string/EnterAdminName"
        android:layout_margin="10dp"
        android:background="@color/red"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/AdminName" />

    <EditText
        android:textAlignment="center"

        android:textColorHint="@color/text_color_white"
       android:inputType="number"
        android:layout_margin="10dp"
        android:hint="@string/EnterPassword"
        android:background="@color/red"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/Apassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:background="@color/colorPrimaryDark"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:text="@string/Ok"
        android:id="@+id/buttonAok"
        android:layout_gravity="right" />

</LinearLayout>