<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="220dp">
    <EditText
        android:textAlignment="center"
        android:inputType="textAutoComplete"
        android:hint="@string/EnterUserName"
        android:textColorHint="@color/text_color_white"
        android:layout_margin="10dp"
        android:background="@color/red"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/userName" />

    <EditText
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:hint="@string/EnterPassword"
        android:textColorHint="@color/text_color_white"
        android:background="@color/red"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/userPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:background="@color/colorPrimaryDark"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ok"
        android:id="@+id/buttonUok" />
</LinearLayout>
</LinearLayout>